fix: client logos on mobile

--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -115,6 +115,7 @@
   margin-top: 75px;
   height: 75px;
   width: 300px;
+  margin-bottom: 50px;
 }
 
 #ttrn {
